<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.karlnicholas.legalservices</groupId>
	<artifactId>legalservices</artifactId>
	<version>2.0.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Legal Services</name>
	<description>Legal Services</description>
	<properties>
		<spring.boot.version>2.5.2</spring.boot.version>
		<version.lucene>8.9.0</version.lucene>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <!-- maven-compiler-plugin -->
	    <version.compiler.plugin>3.8.1</version.compiler.plugin>
	    <maven.compiler.target>11</maven.compiler.target>
	    <maven.compiler.source>11</maven.compiler.source>
	    <maven.deploy.skip>true</maven.deploy.skip> 
	</properties>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<distribution>repo</distribution>
			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Karl Nicholas</name>
			<email>karl.nicholas@outlook.com</email>
			<organizationUrl>https://github.com/karlnicholas</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>https://github.com/karlnicholas/LegalServices.git</connection>
		<developerConnection>scm:git:git@github.com:karlnicholas/LegalServices.git</developerConnection>
		<url>https://github.com/karlnicholas/LegalServices</url>
		<tag>HEAD</tag>
	</scm>
	<modules>
		<module>Statute</module>
		<module>StatuteService</module>
		<module>StatuteServiceReactive</module>
		<module>CaseListModel</module>
		<module>SqlUtil</module>
		<module>OpinionService</module>
		<module>OpinionServiceReactive</module>
		<module>StatuteServer</module>
		<module>GuidedSearchCore</module>
		<module>GuidedSearchWeb</module>
		<module>StatuteCa</module>
		<module>StatuteRestCa</module>
		<module>OpinionRestCa</module>
		<module>OpinionModel</module>
		<module>OpinionParser</module>
		<module>OpinionCrud</module>
		<module>SlipOpinionModel</module>
		<module>SlipOpinionParser</module>
		<module>SlipOpinionProcessor</module>
		<module>SlipOpinionDao</module>
		<module>OpinionViewModel</module>
		<module>OpinionViewDao</module>
		<module>OpinionUserService</module>
		<module>LoadOpinions</module>
		<module>LoadSlipOpinions</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Define the version of the WAR so that we don't need to repeat ourselves 
				in every module -->
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statute</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statuteservice</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statuteservicereactive</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>caselistmodel</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>sqlutil</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionservice</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionservicereactive</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statuteserver</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statuteca</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>guidedsearchcore</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionmodel</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionparser</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinioncrud</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>slipopinionmodel</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>slipopinionparser</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>slipopiniondao</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionviewmodel</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinionviewdao</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-facet</artifactId>
				<version>${version.lucene}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-analyzers-common</artifactId>
				<version>${version.lucene}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-queryparser</artifactId>
				<version>${version.lucene}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-highlighter</artifactId>
				<version>${version.lucene}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>